Task isolation in task pool causes deadlock. #88598

Closed
opened 2021-05-26 17:02:28 +02:00 by Jacques Lucke · 6 comments
Member

We found this deadlock with the new multi-threaded geometry nodes evaluator, but it can also be reproduced without geometry nodes.
In both cases all threads get deadlocked in BLI_task_pool_work_and_wait.

Steps to reproduce with geometry nodes

  1. Undo the change in 223c6e1ead (to enabled threading again).
  2. Start Blender with --threads 2. The number of threads is important.
  3. Load the file below.
  4. Duplicate the cube.
  5. Deadlock (Blender freezes). Call stack of both threads: P2137.

threading_bug.blend

Steps to reproduce without geometry nodes

  1. Apply P2140.
  2. Compile and start Blender.
  3. Deadlock almost immediately as Blender starts.

The bug is related to task isolation. This small change below would remove the deadlock, but reintroduce new issues that were fixed by 08ac4d3d71.

diff --git a/source/blender/blenlib/intern/task_pool.cc b/source/blender/blenlib/intern/task_pool.cc
index 6404f5264cc..0c07e1f6204 100644
--- a/source/blender/blenlib/intern/task_pool.cc
+++ b/source/blender/blenlib/intern/task_pool.cc
@@ -115,7 +115,7 @@ class Task {
   void operator()() const
   {
 #ifdef WITH_TBB
-    tbb::this_task_arena::isolate([this] { run(pool, taskdata); });
+    run(pool, taskdata);
 #else
     run(pool, taskdata);
 #endif

Read the [task isolation docs ]] to understand what tbb::this_task_arena::isolate is doing. At first I didn't really understand how this could lead to a deadlock, but [ https:*link.springer.com/chapter/10.1007/978-1-4842-4398-5_12 | this document explains it in the Oh No! Work Isolation Can Cause Its Own Correctness Issues! section.

We found this deadlock with the new multi-threaded geometry nodes evaluator, but it can also be reproduced without geometry nodes. In both cases all threads get deadlocked in `BLI_task_pool_work_and_wait`. **Steps to reproduce with geometry nodes** 1. Undo the change in 223c6e1ead (to enabled threading again). 2. Start Blender with `--threads 2`. The number of threads is important. 3. Load the file below. 4. Duplicate the cube. 5. Deadlock (Blender freezes). Call stack of both threads: [P2137](https://archive.blender.org/developer/P2137.txt). [threading_bug.blend](https://archive.blender.org/developer/F10143269/threading_bug.blend) **Steps to reproduce without geometry nodes** 1. Apply [P2140](https://archive.blender.org/developer/P2140.txt). 2. Compile and start Blender. 3. Deadlock almost immediately as Blender starts. ------ The bug is related to task isolation. This small change below would remove the deadlock, but reintroduce new issues that were fixed by 08ac4d3d71. ``` diff --git a/source/blender/blenlib/intern/task_pool.cc b/source/blender/blenlib/intern/task_pool.cc index 6404f5264cc..0c07e1f6204 100644 --- a/source/blender/blenlib/intern/task_pool.cc +++ b/source/blender/blenlib/intern/task_pool.cc @@ -115,7 +115,7 @@ class Task { void operator()() const { #ifdef WITH_TBB - tbb::this_task_arena::isolate([this] { run(pool, taskdata); }); + run(pool, taskdata); #else run(pool, taskdata); #endif ``` Read the [task isolation docs ]] to understand what `tbb::this_task_arena::isolate` is doing. At first I didn't really understand how this could lead to a deadlock, but [[ https:*link.springer.com/chapter/10.1007/978-1-4842-4398-5_12 | this ](https:*software.intel.com/content/www/us/en/develop/documentation/tbb-documentation/top/intel-threading-building-blocks-developer-guide/task-isolation.html) document explains it in the *Oh No! Work Isolation Can Cause Its Own Correctness Issues!* section.
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This is interesting. In my testing, there is always a deadlock once the number of objects reaches the number of threads I give Blender. Using all of my 16 threads, it only fails when I tweak the translation after I add the 16th cube.

This is interesting. In my testing, there is always a deadlock once the number of objects reaches the number of threads I give Blender. Using all of my 16 threads, it only fails when I tweak the translation after I add the 16th cube.
Jacques Lucke changed title from Deadlock when new geometry nodes evaluator is used. to Task isolation in task pool causes deadlock. 2021-05-27 16:04:33 +02:00

This issue was referenced by ed1fc9d96b

This issue was referenced by ed1fc9d96bbac2ac3d4282400a9717e19e84211d
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-06-08 10:42:28 +02:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88598
No description provided.